--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
 
@@ -15,8 +17,8 @@
 /*********************/
 :root {
 	/* startje */
-	--color-text:#111;
-	--color-background:#eee;
+	--color-text: #111;
+	--color-background: #eee;
 }
 
 
@@ -28,4 +30,57 @@
 /****************/
 
 /* jouw code */
+body {
+	margin: 0;
+    font-family: Speedee;
+    font-size: 14px;
+    line-height: 24px;
+    color: #292929;
+    letter-spacing: -.15px;
+}
 
+header {
+	height: 48px;
+	box-shadow: 0 0.1px 4px 0 #cecece;
+}
+section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 3em 1em 4em 1em;
+	border: .0625rem solid #cecece;
+	border-radius: 0.3em;
+	padding-bottom: 2em;
+}
+
+section img {
+	width: 100%;
+	border-radius: 0.2em 0.2em 0 0;
+	margin: 0;
+}
+
+section h2 {
+	padding-left: 1.1em;
+	font-size: 2em;
+	font-weight: bolder;
+}
+
+section p {
+	padding: 0 2em 1em 2em;
+}
+
+section a {
+	background-color: #ffbc0d;
+    border-radius: 4px;
+    padding: 9pt 13px;
+    display: inline-flex;
+    line-height: 24px;
+    color: #292929;
+    text-decoration: none;
+    margin: 0 29px 0 1.8em;
+}
+
+section:nth-of-type(4) h2{
+	font-size: 1.6em;
+}
