--- a/styles/style.css
+++ b/styles/style.css
@@ -54,8 +54,9 @@ section {
 	border-radius: 0.3em;
 	padding-bottom: 2em;
 	gap: 2em;
-	min-height: 25em;
 	display: none;
+	height: 36em;
+	position: relative;
 }
 
 section img {
@@ -85,14 +86,14 @@ section a {
     margin: 0 29px 0 1.8em;
 }
 
-section:nth-of-type(4) h2{
-	font-size: 1.6em;
-}
 
 section article:last-of-type{
 	display: flex;
 	justify-content: center;
 	gap: 1em;
+	position: absolute;
+	bottom: 1em;
+	left: 3em;
 }
 
 section article button{
